--- a/views/mails/quotation/html.jade
+++ b/views/mails/quotation/html.jade
@@ -664,9 +664,9 @@ html(xmlns='http://www.w3.org/1999/xhtml', xmlns:o='urn:schemas-microsoft-com:of
                                                 // <![endif]
                                                 //if (mso)|(IE)
                                                 //if (mso)|(IE)
-                        div(style='background-color:#85459A;')
+                        div(style='background-color:transparent;')
                             .block-grid(style='Margin: 0 auto; min-width: 320px; max-width: 700px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; background-color: transparent;')
-                                div(style='border-collapse: collapse;display: table;width: 100%;background-color:transparent;')
+                                div(style='border-collapse: collapse;display: table;width: 100%;background-color:#85459A;')
                                     //if (mso)|(IE)
                                       table(width='100%', cellpadding='0', cellspacing='0', border='0', style='background-color:#85459A;')
                                         tbody
