--- a/views/mails/quotation/html.jade
+++ b/views/mails/quotation/html.jade
@@ -277,6 +277,65 @@ html(xmlns='http://www.w3.org/1999/xhtml', xmlns:o='urn:schemas-microsoft-com:of
                                                     div(style="color:#555555;font-family:'Lato', Tahoma, Verdana, Segoe, sans-serif;line-height:120%;padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;")
                                                         div(style="font-family: 'Lato', Tahoma, Verdana, Segoe, sans-serif; font-size: 12px; line-height: 14px; color: #555555;")
                                                             p(style='font-size: 14px; line-height: 21px; margin: 0;')
+                                                                span(style='font-size: 18px;') From
+                                                //if mso
+                                                // [if (!mso)&(!IE)] <!
+                                                // <![endif]
+                                                //if (mso)|(IE)
+                                                //if (mso)|(IE)
+                                                  table(width='100%', cellpadding='0', cellspacing='0', border='0')
+                                                    tbody
+                                                      tr
+                                                        td(style='padding-right: 10px; padding-left: 0px; padding-top:5px; padding-bottom:5px;')
+                                                .col.num6(style='min-width: 320px; max-width: 350px; display: table-cell; vertical-align: top; width: 350px;')
+                                                    div(style='width:100% !important;')
+                                                        // [if (!mso)&(!IE)] <!
+                                                        div(style='border-top:0px solid transparent; border-left:0px solid transparent; border-bottom:0px solid transparent; border-right:0px solid transparent; padding-top:5px; padding-bottom:5px; padding-right: 10px; padding-left: 0px;')
+                                                            // <![endif]
+                                                            //if mso
+                                                              table(width='100%', cellpadding='0', cellspacing='0', border='0')
+                                                                tbody
+                                                                  tr
+                                                                    td(style='padding-right: 10px; padding-left: 10px; padding-top: 10px; padding-bottom: 10px; font-family: Tahoma, Verdana, sans-serif')
+                                                            div(style="color:#555555;font-family:'Lato', Tahoma, Verdana, Segoe, sans-serif;line-height:120%;padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;")
+                                                                div(style="font-family: 'Lato', Tahoma, Verdana, Segoe, sans-serif; line-height: 14px; font-size: 12px; color: #555555;")
+                                                                    p(style='line-height: 21px; font-size: 12px; margin: 0;')
+                                                                        span(style='font-size: 18px;') #{address}
+                                                            //if mso
+                                                            // [if (!mso)&(!IE)] <!
+                                                            // <![endif]
+                                                            //if (mso)|(IE)
+                                                            //if (mso)|(IE)
+                        div(style='background-color:transparent;')
+                            .block-grid.two-up.no-stack(style='Margin: 0 auto; min-width: 320px; max-width: 700px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; background-color: #FFFFFF;')
+                                div(style='border-collapse: collapse;display: table;width: 100%;background-color:#FFFFFF;')
+                                    //if (mso)|(IE)
+                                      table(width='100%', cellpadding='0', cellspacing='0', border='0', style='background-color:transparent;')
+                                        tbody
+                                          tr
+                                            td(align='center')
+                                              table(cellpadding='0', cellspacing='0', border='0', style='width:700px')
+                                                tbody
+                                                  tr.layout-full-width(style='background-color:#FFFFFF')
+                                    //if (mso)|(IE)
+                                      table(width='100%', cellpadding='0', cellspacing='0', border='0')
+                                        tbody
+                                          tr
+                                            td(style='padding-right: 0px; padding-left: 35px; padding-top:5px; padding-bottom:30px;')
+                                    .col.num6(style='min-width: 320px; max-width: 350px; display: table-cell; vertical-align: top; width: 350px;')
+                                        div(style='width:100% !important;')
+                                            // [if (!mso)&(!IE)] <!
+                                            div(style='border-top:0px solid transparent; border-left:0px solid transparent; border-bottom:0px solid transparent; border-right:0px solid transparent; padding-top:5px; padding-bottom:30px; padding-right: 0px; padding-left: 35px;')
+                                                // <![endif]
+                                                //if mso
+                                                  table(width='100%', cellpadding='0', cellspacing='0', border='0')
+                                                    tbody
+                                                      tr
+                                                        td(style='padding-right: 10px; padding-left: 10px; padding-top: 10px; padding-bottom: 10px; font-family: Tahoma, Verdana, sans-serif')
+                                                .col.num6(style='display: table-cell; vertical-align: top; width: 300px;')
+                                                    div(style="color:#555555;font-family:'Lato', Tahoma, Verdana, Segoe, sans-serif;line-height:120%;padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;")
+                                                        div(style="font-family: 'Lato', Tahoma, Verdana, Segoe, sans-serif; font-size: 12px; line-height: 14px; color: #555555;")
+                                                            p(style='font-size: 14px; line-height: 21px; margin: 0;')
                                                                 span(style='font-size: 18px;') Dates
                                                 //if mso
                                                 // [if (!mso)&(!IE)] <!
